# workout-gate

./: .gitignore  2026-06-16_Workout-Gate_Brief-v2.md  LICENSE  README.md  config.example.yaml  pyproject.toml
installer/: install.ps1  uninstall.ps1
scripts/: camera_check.py  probe_pipeline.py  run-tests.ps1
src/workout_gate/: __init__.py  __main__.py  active_time.py  app.py  autostart.py  cli.py  commands.py  config.py  desktop_icon.py  diagnostics.py  idle_detector.py  logging_config.py  main.py  paths.py  scheduler.py  single_instance.py  storage.py  tray.py  windows_session.py
src/workout_gate/gate/: __init__.py  controller.py  emergency_bypass.py  engine.py  fullscreen.py  vision_worker.py
src/workout_gate/ui/: __init__.py  desktop_widget.py  settings_window.py  stats_window.py  workout_window.py
src/workout_gate/vision/: __init__.py  calibration.py  camera.py  draw.py  geometry.py  pose_detector.py  preview.py  squat_counter.py  squat_state.py  subject_tracker.py  vertical_counter.py
tests/: test_active_time.py  test_calibration.py  test_config.py  test_desktop_widget.py  test_emergency_bypass.py  test_fail_open.py  test_gate_integration.py  test_geometry.py  test_scheduler.py  test_single_instance.py  test_squat_counter.py  test_storage.py  test_subject_tracker.py  test_vertical_counter.py
