[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workout-gate"
version = "1.0.0"
description = "Gate del computer dietro 10 squat verificati via webcam, ogni 30 minuti di uso attivo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nikola Blagojevic" }]
dependencies = [
  "PySide6>=6.6",
  "opencv-python>=4.9",
  "mediapipe>=0.10.14",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
workout-gate = "workout_gate.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"workout_gate.vision" = ["models/*.task"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = false
